bug 1351 filter spacing issue changes

--- a/styles/productList.module.scss
+++ b/styles/productList.module.scss
@@ -246,10 +246,10 @@
     .mck-filter-delete-icon {
       width: 10px;
     }
-    .mck-hn-filter-subcat {
-      padding-right: 12px;
-      padding-bottom: 8px;
-    }
+    // .mck-hn-filter-subcat {
+    //   padding-right: 12px;
+    //   padding-bottom: 8px;
+    // }
     .mck-hn-filter-subcat:last-child {
       margin: 0;
     }
@@ -288,7 +288,7 @@
     
       &-content {
         max-height: 0;
-        padding: 0 1em;
+        // padding: 0 1em;
         transition: all 0.5s;
         ul,
         ol {
@@ -308,8 +308,8 @@
     
         ~ .tab-content {
           max-height: 100vh;
-          padding: 12px;
-          border-top: 0.5px solid #ccd1e3;
+          // padding: 12px;
+          // border-top: 0.5px solid #ccd1e3;
         }
       }
     }
@@ -341,9 +341,9 @@
       }
     }
     @media screen and (max-width: 1023px) {
-      .mck-Product-Listing-page .mck-hn-filter-subcat {
-        padding-bottom: 0;
-      }
+      // .mck-Product-Listing-page .mck-hn-filter-subcat {
+      //   padding-bottom: 0;
+      // }
       .mck-Product-Listing-page .filter-title {
         position: relative;
         z-index: -1;
